# aws-robomaker-sample-application-cloudwatch

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  README.md  add_map_plugin.py  add_map_plugin.rb  buildspec.yml  genmap.sh  github_deploy.pem.enc  roboMakerSettings.json  scenarios.json
.github/actions/aws-robomaker-sample-application-ci/: README.md  action.yml  package-lock.json  package.json
.github/actions/aws-robomaker-sample-application-ci/src/: aws-robomaker-sample-application-ci.ts
.github/actions/cw-build-status/: README.md  package-lock.json  package.json
.github/actions/s3-cp/: Dockerfile  entrypoint.sh
.github/workflows/: lint.yml  main.yml  ros1.yml  ros2.yml
map_config/: default.rb  default_args.json  get_pkg_path.py  small_house.rb  worldforge.rb
robot_ws/: .rosinstall
robot_ws/src/cloudwatch_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robot_ws/src/cloudwatch_robot/config/: cloudwatch_logs_config.yaml  cloudwatch_metrics_config.yaml  health_metrics_config.yaml
robot_ws/src/cloudwatch_robot/deploymentScripts/: post_check_monitor_nodes.sh
robot_ws/src/cloudwatch_robot/launch/: await_commands.launch  await_commands.launch.py  deploy_await_commands.launch  deploy_await_commands.launch.py  deploy_rotate.launch  deploy_rotate.launch.py  monitoring.launch  monitoring.launch.py  move_random.launch  rotate.launch  rotate.launch.py
robot_ws/src/cloudwatch_robot/nodes/: monitor_distance_to_goal  monitor_distance_to_goal.py  monitor_obstacle_distance  monitor_obstacle_distance.py  monitor_speed  monitor_speed.py  move_random  rotate  rotate.py
robot_ws/src/cloudwatch_robot/rviz/: turtlebot3_navigation.rviz
robot_ws/src/cloudwatch_robot/src/cloudwatch_robot/: monitor_distance_to_goal.py  monitor_obstacle_distance.py  monitor_speed.py  rotate.py
robot_ws/src/lidar_checker/: CMakeLists.txt  README.md  monitor_obstacle_distance.cpp  package.xml
robot_ws/src/navigation_robot/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/navigation_robot/launch/: await_commands.launch  deploy_await_commands.launch  deploy_rotate.launch  monitoring.launch  rotate.launch
robot_ws/src/navigation_robot/nodes/: monitor_obstacle_distance.py  rotate.py
scripts/: add_map_plugin.py  genmap.sh  genmap_script.sh  install_linters.sh  lint.sh  setup.sh
simulation_ws/: .rosinstall
simulation_ws/simulation_ws/log/: latest_build
simulation_ws/simulation_ws/src/aws-robomaker-simulation-ros-pkgs/: CONTRIBUTING.md  README.md
simulation_ws/simulation_ws/src/aws_robomaker_test_framework/: package.xml  setup.py
simulation_ws/simulation_ws/src/sample_node/: setup.py
simulation_ws/src/aws_robomaker_simulation_bookstore/: CMakeLists.txt  README.md  package.xml
simulation_ws/src/aws_robomaker_simulation_bookstore/launch/: bookstore.launch  bookstore_turtlebot_navigation.launch  bookstore_turtlebot_slam.launch  view_bookstore.launch
simulation_ws/src/aws_robomaker_simulation_bookstore/routes/: route.yaml
simulation_ws/src/aws_robomaker_simulation_common/: CMakeLists.txt  README.md  package.xml  setup.py
simulation_ws/src/aws_robomaker_simulation_common/aws_robomaker_simulation_common/: route_manager.py
simulation_ws/src/aws_robomaker_simulation_common/nodes/: route_manager  route_manager.py
simulation_ws/src/aws_robomaker_simulation_common/src/aws_robomaker_simulation_common/: route_manager.py
simulation_ws/src/aws_robomaker_test_framework/examples/: simple_test.py
simulation_ws/src/aws_robomaker_test_framework/launch/: test_framework.launch
simulation_ws/src/cloudwatch_simulation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
simulation_ws/src/cloudwatch_simulation/launch/: bookstore.launch  bookstore.launch.py  bookstore_turtlebot3_navigation.launch.py  bookstore_turtlebot_navigation.launch  bookstore_turtlebot_navigation.launch.py  empty_world.launch  empty_world.launch.py  generate_map.launch  map_bookstore.launch  map_smallhouse.launch  new_btn.launch.py  sample_world_turtlebot_navigation.launch.py  small_house_turtlebot_navigation.launch  small_house_turtlebot_navigation.launch.py  small_house_world.launch.py  start_map_service.launch  start_map_service.launch.py  test_world.launch  turtlebot3_nav2.launch.py  turtlebot3_navigation.launch  turtlebot3_navigation.launch.py  view_empty_world.launch  view_empty_world.launch.py  world_turtlebot_navigation.launch.py  worldforge_turtlebot_navigation.launch
simulation_ws/src/cloudwatch_simulation/param/: burger.yaml
simulation_ws/src/cloudwatch_simulation/scripts/: spawn_performer.sh
simulation_ws/src/navigation_simulation/: CMakeLists.txt  package.xml
simulation_ws/src/navigation_simulation/launch/: bookstore.launch  bookstore_turtlebot_navigation.launch  empty_world.launch  small_house_turtlebot_navigation.launch  start_map_service.launch  test_world.launch  view_empty_world.launch  worldforge_turtlebot_navigation.launch
simulation_ws/src/sample_node/: CMakeLists.txt
simulation_ws/src/sample_node/nodes/: example_node.py
simulation_ws/src/test_nodes/: CMakeLists.txt  package.xml  setup.py
simulation_ws/src/test_nodes/launch/: test.launch
simulation_ws/src/test_nodes/nodes/: navigation_test  navigation_test.py
simulation_ws/src/turtlebot3_description_reduced_mesh/: CMakeLists.txt  package.xml
simulation_ws/src/turtlebot3_description_reduced_mesh/launch/: spawn_turtlebot.launch.py
simulation_ws/src/turtlebot3_description_reduced_mesh/map/: map.pgm  map.yaml
simulation_ws/src/turtlebot3_description_reduced_mesh/urdf/: turtlebot3_burger.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
simulation_ws/src/turtlebot3_description_reduced_mesh/worlds/: empty.world
simulation_ws_ros/: .rosinstall
simulation_ws_ros/src/aws_robomaker_test_framework/: CMakeLists.txt
simulation_ws_ros/src/aws_robomaker_test_framework/config/: node_sample_configuration.yaml
simulation_ws_ros/src/aws_robomaker_test_framework/launch/: test_framework.launch
simulation_ws_ros/src/sample_node/: package.xml
(+2 files in other folders)
