<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>cloudwatch_robot</name>
  <version>1.1.0</version>
  <description>
  AWS RoboMaker robot package that provides a sample application for integrating AWS CloudWatch with ROS.
  </description>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cloudwatch_logger</depend>
  <depend>cloudwatch_metrics_collector</depend>
  <depend>cloudwatch_logs_common</depend>
  <depend>cloudwatch_metrics_common</depend>
  <depend>aws_common</depend>
  <depend>aws_ros2_common</depend>
  <depend>health_metric_collector</depend>
  <depend>turtlebot3</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>builtin_interfaces</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
