<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>aws_robomaker_simulation_common</name>
  <version>2.0.0</version>
  <description>
    AWS RoboMaker simulation package for commonly used nodes and helpers.
  </description>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>turtlebot3</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
