<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>aws_robomaker_simulation_common</name>
  <version>2.1.0</version>
  <description>
    AWS RoboMaker simulation package for commonly used nodes and helpers.
  </description>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>Apache 2.0</license>
  <depend>rclpy</depend>
  <depend>python3-rospkg</depend>
  <depend>python3-yaml</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
