<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>cloudwatch_simulation</name>
  <version>2.0.0</version>
  <description>
    AWS RoboMaker simulation package for launching a TurtleBot3 in a empty world or a small house.
  </description>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>turtlebot3</depend>
  <depend>nav2_bringup</depend>
  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
