<?xml version="1.0"?>
<package format="2">
  <name>cloudwatch_simulation</name>
  <version>1.2.0</version>
  <description>
    AWS RoboMaker simulation package for launching a TurtleBot3 in a empty world or a small house.
  </description>
  <license>MIT</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <!-- Required to install .rviz model-->
  <depend>turtlebot3_description</depend>
  <!-- Navigation stack -->
  <depend>turtlebot3_navigation</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib:${prefix}/models/turtlebot3_autorace/gazebo_traffic_plugin" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models:${prefix}/models/turtlebot3_autorace"/>
  </export>
</package>
