<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>turtlebot3_description_reduced_mesh</name>
  <version>1.1.0</version>
  <description>
    A copy of the TurtleBot3 models with reduced poly counts. Based off turtlebot3_description package.
  </description>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
