<?xml version="1.0"?>
<package format="2">
  <name>sample_node</name>
  <version>1.0.0</version>
  <description>
    Sample
  </description>
  <license>MIT</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
